commit translated contents

--- a/docs/visual-basic/misc/bc30016.md
+++ b/docs/visual-basic/misc/bc30016.md
@@ -1,5 +1,5 @@
 ---
-title: Le etichette non sono valide all'esterno di espressioni lambda su più righe metodi
+title: Le etichette non sono valide all'esterno di metodi-espressioni lambda su più righe
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30016
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30016
 ms.assetid: 17d12a96-d759-4df9-882c-5e45c1d814a5
-ms.openlocfilehash: 6979d15f223fb7c8ef81d8a423f998541428eed9
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d1125f2541eb3e00f7f417af7c27651c36978745
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61770266"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366801"
 ---
 # <a name="labels-are-not-valid-outside-methodsmultiline-lambdas"></a>Le etichette non sono valide all'esterno di metodi/espressioni lambda su più righe
 È possibile aggiungere un'etichetta a un'istruzione solo in una routine `Sub`, `Function`, in a una proprietà `Get`o in una proprietà `Set` . Solo un'istruzione eseguibile può avere un'etichetta e tutte le istruzioni eseguibili devono essere all'interno delle routine.  
@@ -25,8 +25,8 @@ ms.locfileid: "61770266"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: etichettare le istruzioni](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
-- [Istruzione Sub](../../visual-basic/language-reference/statements/sub-statement.md)
-- [Istruzione Function](../../visual-basic/language-reference/statements/function-statement.md)
-- [Istruzione Get](../../visual-basic/language-reference/statements/get-statement.md)
-- [Istruzione Set](../../visual-basic/language-reference/statements/set-statement.md)
+- [Procedura: Etichettare le istruzioni](../programming-guide/program-structure/how-to-label-statements.md)
+- [Istruzione Sub](../language-reference/statements/sub-statement.md)
+- [Istruzione Function](../language-reference/statements/function-statement.md)
+- [Istruzione Get](../language-reference/statements/get-statement.md)
+- [Istruzione set](../language-reference/statements/set-statement.md)
