--- a/docs/visual-basic/misc/bc30032.md
+++ b/docs/visual-basic/misc/bc30032.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30032
 ms.assetid: 4cd3bffc-b5b2-4000-bfb9-7d6968e6fc62
-ms.openlocfilehash: 17f9299016a7a2f201a510d1753c6c440ede239e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0ee41dc4f725b781637ef14d7b90909c39f9e3be
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64608770"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391560"
 ---
 # <a name="events-cannot-have-a-return-type"></a>Gli eventi non possono avere un tipo restituito
 Gli eventi possono accettare argomenti ma non possono restituire direttamente i valori.  
@@ -25,4 +25,4 @@ Gli eventi possono accettare argomenti ma non possono restituire direttamente i 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
