--- a/docs/visual-basic/misc/bc30053.md
+++ b/docs/visual-basic/misc/bc30053.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30053
 ms.assetid: aa55f3b7-2045-497b-9543-5ec6e2b74fe2
-ms.openlocfilehash: 0fb68359742f9a5b0a5320dfaf54c5b43c3ddbcc
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 02bc0810caa1564c3d25169d5a28ac423e53b4bd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68513077"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391352"
 ---
 # <a name="arrays-cannot-be-declared-with-new"></a>Le matrici non possono essere dichiarate con 'New'
 
@@ -37,5 +37,5 @@ Si noti che la clausola `New` per la matrice deve contenere sia le parentesi ton
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
-- [Procedura: Inizializzare una variabile di matrice in Visual Basic](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
+- [Procedura: Inizializzare una variabile di matrice in Visual Basic](../programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
