--- a/docs/visual-basic/misc/bc30258.md
+++ b/docs/visual-basic/misc/bc30258.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30258
 ms.assetid: cc07e7cd-b4a9-41a4-b1ac-2ef28162a1dd
-ms.openlocfilehash: 39e5f2637c42f84830b7f0a015593ba49bfcd4bf
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c51032da1a3a1964ab4f7dcf47c784795b6083d2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664169"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391118"
 ---
 # <a name="classes-can-inherit-only-from-other-classes"></a>Le classi possono derivare solo da altre classi
 Un'istruzione `Inherits` specifica un tipo diverso da una classe come tipo di base.  
@@ -25,4 +25,4 @@ Un'istruzione `Inherits` specifica un tipo diverso da una classe come tipo di ba
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
