--- a/docs/visual-basic/misc/bc30266.md
+++ b/docs/visual-basic/misc/bc30266.md
@@ -1,5 +1,5 @@
 ---
-title: "'<declaration1>' non può eseguire<declaration2>l'override di '' perché hanno livelli di accesso diversi"
+title: "' <declaration1> ' non può eseguire l'override di ' <declaration2> ' perché hanno livelli di accesso diversi"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30266
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30266
 ms.assetid: c9c5c14e-876c-430d-ab98-5087c19efae7
-ms.openlocfilehash: fd81bf9c9e21b6e391b69377b69dab82da32351c
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f94bb614bd0cf7010adc113be288c8921b6338c7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667437"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391040"
 ---
-# <a name="declaration1-cannot-override-declaration2-because-they-have-different-access-levels"></a>'\<dichiarazione1 >' non può eseguire\<l'override di ' dichiarazione2 >' perché hanno livelli di accesso diversi
+# <a name="declaration1-cannot-override-declaration2-because-they-have-different-access-levels"></a>' \<declaration1> ' non può eseguire l'override di ' \<declaration2> ' perché hanno livelli di accesso diversi
 Una dichiarazione di routine o proprietà tenta di eseguire l'override di un elemento ereditato con lo stesso nome, ma specifica un'accessibilità diversa rispetto all'elemento ereditato. L'accessibilità dell'elemento ereditato, ad esempio `Public` o `Private`, deve essere mantenuta nell'override.  
   
  **ID errore:** BC30266  
@@ -26,4 +26,4 @@ Una dichiarazione di routine o proprietà tenta di eseguire l'override di un ele
 ## <a name="see-also"></a>Vedere anche
 
 - [Override di proprietà e metodi nelle classi derivate](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
-- [Livelli di accesso in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)
+- [Livelli di accesso in Visual Basic](../programming-guide/language-features/declared-elements/access-levels.md)
