--- a/docs/visual-basic/misc/bc30277.md
+++ b/docs/visual-basic/misc/bc30277.md
@@ -1,5 +1,5 @@
 ---
-title: Carattere di tipo '<charactername>'non corrisponde al tipo dati dichiarato'<type>'
+title: Il carattere tipo ' <charactername> ' non corrisponde al tipo di dati dichiarato ' <type> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30277
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30277
 ms.assetid: 9808f57e-a46c-43f9-b5e7-275794627763
-ms.openlocfilehash: 0ab7b67c99fc525e669ec9ac212ac7b50fc66f37
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 90c55bb61bb6cca88573f81fb82d0e9928165330
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664074"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390780"
 ---
-# <a name="type-character-charactername-does-not-match-declared-data-type-type"></a>Carattere di tipo '\<Nomecarattere >' non corrisponde tipo dati dichiarato '\<tipo >'
+# <a name="type-character-charactername-does-not-match-declared-data-type-type"></a>Il carattere tipo ' \<charactername> ' non corrisponde al tipo di dati dichiarato ' \<type> '
 Una variabile è dichiarata con un tipo di dati ma si fa riferimento a essa con un carattere di tipo che rappresenta un tipo di dati incompatibile, ad esempio `K$ = 10` quando `K` è dichiarato come `Integer`.  
   
  **ID errore:** BC30277  
@@ -25,4 +25,4 @@ Una variabile è dichiarata con un tipo di dati ma si fa riferimento a essa con 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Caratteri tipo](../../visual-basic/programming-guide/language-features/data-types/type-characters.md)
+- [Caratteri tipo](../programming-guide/language-features/data-types/type-characters.md)
