--- a/docs/visual-basic/misc/bc30289.md
+++ b/docs/visual-basic/misc/bc30289.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30289
 ms.assetid: 9dc332e2-3dd7-4159-959b-6776345c9d0c
-ms.openlocfilehash: 070802e6b4c3c58e0a348dc7e8b224247aeb03d4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 15c3fc4c5a083aba4f14f9aeb9ac7a4ca77147b9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664009"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390617"
 ---
 # <a name="statement-cannot-appear-within-a-method-body"></a>L'istruzione non può essere specificata nel corpo di un metodo
 Una routine contiene un'istruzione non valida, ad esempio un'altra dichiarazione di routine. Le dichiarazioni di routine non possono essere nidificate.  
@@ -25,4 +25,4 @@ Una routine contiene un'istruzione non valida, ad esempio un'altra dichiarazione
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [Procedure](../programming-guide/language-features/procedures/index.md)
