--- a/docs/visual-basic/misc/bc30603.md
+++ b/docs/visual-basic/misc/bc30603.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30603
 ms.assetid: 3aef29d6-eadf-4f1f-b214-dfeae5e51c4f
-ms.openlocfilehash: b19f210e0d9096bfd88953c8f3436f4fa94ba8b9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8a56ff6aba8ec7d98d315974bd4f0cf7cabb8692
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621262"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389967"
 ---
 # <a name="statement-cannot-appear-within-an-interface-body"></a>L'istruzione non può trovarsi all'interno di un corpo di interfaccia
 La dichiarazione di un membro di interfaccia include un'istruzione di terminazione del membro, nel formato `End`*nomemembro*.  
@@ -27,5 +27,5 @@ La dichiarazione di un membro di interfaccia include un'istruzione di terminazio
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
-- [Fine \<parola chiave > istruzione](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
+- [\<keyword>Istruzione End](../language-reference/statements/end-keyword-statement.md)
