--- a/docs/visual-basic/misc/bc30611.md
+++ b/docs/visual-basic/misc/bc30611.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30611
 ms.assetid: e310bd0d-f221-4b02-87f3-02124f4de87c
-ms.openlocfilehash: 8efefba6e76b15e9f74d524c11165e7e1f9d10c1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9654c95bad5938bd6be0aefd6ce85fb9dc797a3c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646816"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389794"
 ---
 # <a name="array-dimensions-cannot-have-a-negative-size"></a>Le dimensioni di una matrice non possono essere negative
 Uno o più limiti della matrice specificati corrispondono a un numero negativo. È possibile specificare un indice negativo solo quando si usa un limite superiore di -1 per dichiarare una matrice vuota. Una matrice di questo tipo ha zero elementi, ma non è `Nothing`.  
@@ -25,4 +25,4 @@ Uno o più limiti della matrice specificati corrispondono a un numero negativo. 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
