--- a/docs/visual-basic/misc/bc30782.md
+++ b/docs/visual-basic/misc/bc30782.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30782
 ms.assetid: c6b35e63-4d84-449d-9685-41a1bc0a7f35
-ms.openlocfilehash: 63aaf29d36e95aa2295d704a996c61b9bd87acd2
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 0d2cc91992953acda33d465256f88a7454aa2693
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61755220"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389694"
 ---
 # <a name="continue-do-can-only-appear-inside-a-do-statement"></a>Continue Do' può essere specificato solo all'interno di un'istruzione 'Do'
 Un'istruzione `Continue Do` può trovarsi solo all'interno di un ciclo `Do...Loop` .  
@@ -29,5 +29,5 @@ Un'istruzione `Continue Do` può trovarsi solo all'interno di un ciclo `Do...Loo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Continue](../../visual-basic/language-reference/statements/continue-statement.md)
-- [Istruzione Do...Loop](../../visual-basic/language-reference/statements/do-loop-statement.md)
+- [Istruzione continue](../language-reference/statements/continue-statement.md)
+- [Istruzione Do...Loop](../language-reference/statements/do-loop-statement.md)
