--- a/docs/visual-basic/misc/bc31171.md
+++ b/docs/visual-basic/misc/bc31171.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31171
 ms.assetid: 51d256c6-356e-4fbb-b36e-f9976f412307
-ms.openlocfilehash: 2cc85f9f4eafe430dc03aff291fc826919347cdd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2b112431dcaae75ee23880776b3f433f7c899296
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633907"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389342"
 ---
 # <a name="character-sequence----is-not-allowed-in-an-xml-comment"></a>Sequenza di caratteri '--' non consentita in un commento XML
 Un valore letterale del commento XML contiene la sequenza di caratteri '--', che non è supportata.  
@@ -25,6 +25,6 @@ Un valore letterale del commento XML contiene la sequenza di caratteri '--', che
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Valore letterale di commento XML](../../visual-basic/language-reference/xml-literals/xml-comment-literal.md)
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Valore letterale di commento XML](../language-reference/xml-literals/xml-comment-literal.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
