--- a/docs/visual-basic/misc/bc30022.md
+++ b/docs/visual-basic/misc/bc30022.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30022
 ms.assetid: a22eff96-8c18-47c4-9ef0-f98b2ab8a5d8
-ms.openlocfilehash: 30c138914890412bab189cbe2407cd59a851ff4f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e93d017742fbd552f5b454ef2800bc5af5755233
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584130"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366580"
 ---
 # <a name="properties-declared-readonly-cannot-have-a-set"></a>Le proprietà dichiarate 'ReadOnly' non possono avere un elemento 'Set'
 La routine `Set` legge il valore di una proprietà. Le proprietà`ReadOnly` non possono essere dichiarate.  
@@ -25,6 +25,6 @@ La routine `Set` legge il valore di una proprietà. Le proprietà`ReadOnly` non 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Istruzione Set](../../visual-basic/language-reference/statements/set-statement.md)
-- [ReadOnly](../../visual-basic/language-reference/modifiers/readonly.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Istruzione set](../language-reference/statements/set-statement.md)
+- [ReadOnly](../language-reference/modifiers/readonly.md)
