--- a/docs/visual-basic/misc/bc30023.md
+++ b/docs/visual-basic/misc/bc30023.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30023
 ms.assetid: ac290f7d-cbc3-4979-a5d9-1ae1bb26e79d
-ms.openlocfilehash: b0c6d62ce1e4ebc98311d18b4e1d8d3ac0ad8f59
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2e8d00fc455ab6aa32c9bbba7497ceda308cb062
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584109"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366554"
 ---
 # <a name="properties-declared-writeonly-cannot-have-a-get"></a>Le proprietà dichiarate 'WriteOnly' non possono avere un 'Get'
 La routine `Get` legge il valore di una proprietà. Le proprietà`WriteOnly` non possono essere lette.  
@@ -25,6 +25,6 @@ La routine `Get` legge il valore di una proprietà. Le proprietà`WriteOnly` non
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Istruzione Get](../../visual-basic/language-reference/statements/get-statement.md)
-- [WriteOnly](../../visual-basic/language-reference/modifiers/writeonly.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Istruzione Get](../language-reference/statements/get-statement.md)
+- [WriteOnly](../language-reference/modifiers/writeonly.md)
