--- a/docs/visual-basic/misc/bc30050.md
+++ b/docs/visual-basic/misc/bc30050.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30050
 ms.assetid: da02aefe-950e-4289-89b3-48e10d0def1b
-ms.openlocfilehash: a6ef09baf91d4b5793dc26efb3331c8a61c616ac
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ab193fae1aec7f6c6ffaebe171afe6b0fa8a9544
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649937"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391468"
 ---
 # <a name="paramarray-parameter-must-be-an-array"></a>Il parametro ParamArray deve essere una matrice
 Un argomento `ParamArray` deve essere dichiarato come tipo di matrice unidimensionale. La dichiarazione non include parentesi dopo il nome dell'argomento `ParamArray` .  
@@ -25,6 +25,6 @@ Un argomento `ParamArray` deve essere dichiarato come tipo di matrice unidimensi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici di parametri](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
-- [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Matrici di parametri](../programming-guide/language-features/procedures/parameter-arrays.md)
+- [ParamArray](../language-reference/modifiers/paramarray.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
