--- a/docs/visual-basic/misc/bc30052.md
+++ b/docs/visual-basic/misc/bc30052.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30052
 ms.assetid: 5ee0d2cb-14e2-4a0f-b758-f987a3f9eb73
-ms.openlocfilehash: 8f686c658c02536db097a079f5fafee191be1be5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 084cbff8b2be122b131e6da72ee707a0f36daf64
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649921"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391367"
 ---
 # <a name="array-exceeds-the-limit-of-32-dimensions"></a>La matrice supera il limite di 32 dimensioni
 Una matrice non può avere più di 32 dimensioni.  
@@ -25,4 +25,4 @@ Una matrice non può avere più di 32 dimensioni.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
