--- a/docs/visual-basic/misc/bc30057.md
+++ b/docs/visual-basic/misc/bc30057.md
@@ -1,5 +1,5 @@
 ---
-title: Troppi argomenti per '<procedurename>'
+title: Troppi argomenti per ' <procedurename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30057
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30057
 ms.assetid: 1e0bd0e0-81c2-43cc-85bd-9f9d7c0d6a85
-ms.openlocfilehash: eaa15d2e63df4055eb15672dbab7f830a894558d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 99df1a507f1a0fe4ae1d7d60d7383f64523cca9d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649918"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391375"
 ---
-# <a name="too-many-arguments-to-procedurename"></a>Troppi argomenti per '\<nomeroutine >'
+# <a name="too-many-arguments-to-procedurename"></a>Troppi argomenti per ' \<procedurename> '
 Il numero di argomenti forniti in una chiamata di routine supera il numero di argomenti definiti per la routine.  
   
  **ID errore:** BC30057  
@@ -25,4 +25,4 @@ Il numero di argomenti forniti in una chiamata di routine supera il numero di ar
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
