--- a/docs/visual-basic/misc/bc30062.md
+++ b/docs/visual-basic/misc/bc30062.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30062
 ms.assetid: 05350c30-f227-453f-a743-54fa4305b1f5
-ms.openlocfilehash: 7f38b3903258a24ba943bb0acdbfd81d29b437e8
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: b0e0704802da489d7d9a5b3aecbf97c42da02692
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660179"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391209"
 ---
 # <a name="me-cannot-be-the-target-of-an-assignment"></a>'Me' non può essere la destinazione di un'assegnazione
 La parola chiave `Me` fa sempre riferimento all'istanza specifica di una classe in cui è attualmente in esecuzione il codice. Non è possibile modificarne il valore.  
@@ -25,5 +25,5 @@ La parola chiave `Me` fa sempre riferimento all'istanza specifica di una classe 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Me](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
-- [Assegnazione di variabili oggetto](../../visual-basic/programming-guide/language-features/variables/object-variable-assignment.md)
+- [Me stesso](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
+- [Assegnazione di variabili oggetto](../programming-guide/language-features/variables/object-variable-assignment.md)
