--- a/docs/visual-basic/misc/bc30290.md
+++ b/docs/visual-basic/misc/bc30290.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30290
 ms.assetid: 34c38cff-fb9c-406d-82e8-ca251ee77104
-ms.openlocfilehash: 82270062a129acd7e6c31cfde110228e0c01fd91
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c54cc76e1b86de513e52c31e1d11536b0f1ca4f5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663997"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390565"
 ---
 # <a name="local-variable-cannot-have-the-same-name-as-the-function-containing-it"></a>La variabile locale non può avere lo stesso nome della funzione in cui è contenuta
 Un'istruzione `Dim` specifica una variabile con lo stesso nome della routine `Function` in cui è contenuta.  
@@ -25,4 +25,4 @@ Un'istruzione `Dim` specifica una variabile con lo stesso nome della routine `Fu
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
