--- a/docs/visual-basic/misc/bc30547.md
+++ b/docs/visual-basic/misc/bc30547.md
@@ -1,5 +1,5 @@
 ---
-title: Interfaccia '<interfacename>' non può essere indicizzata perché non contiene proprietà predefinite
+title: Impossibile indicizzare '<interfacename>' perché non contiene proprietà predefinite
 ms.date: 07/20/2015
 f1_keywords:
 - bc30547
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30547
 ms.assetid: d9d83868-5e81-4ec5-878e-2303489d8f2f
-ms.openlocfilehash: 3a0d17c18898e5cc7ff89fd9ff4fe16e7f6ab8b1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: be1e66705d3e4d5ef6e7049bf8e286f7f01da054
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625213"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390305"
 ---
-# <a name="interface-interfacename-cannot-be-indexed-because-it-has-no-default-property"></a>Interfaccia '\<nomeinterfaccia >' non può essere indicizzata perché non contiene proprietà predefinite
+# <a name="interface-interfacename-cannot-be-indexed-because-it-has-no-default-property"></a>Impossibile indicizzare '\<interfacename>' perché non contiene proprietà predefinite
 Le espressioni di indice devono risultare in un valore il cui tipo sia una matrice, possegga un set di proprietà predefinite in overload o in un set di proprietà in overload. Un'interfaccia può avere solo un metodo o una proprietà predefinita. Ne consegue che può ereditare un'interfaccia contenente un metodo o una proprietà predefinita oppure che il suo blocco di definizione può contenere un metodo o una proprietà contrassegnata come predefinita.  
   
  **ID errore:** BC30547  
@@ -25,4 +25,4 @@ Le espressioni di indice devono risultare in un valore il cui tipo sia una matri
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
