--- a/docs/visual-basic/misc/bc30550.md
+++ b/docs/visual-basic/misc/bc30550.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30550
 ms.assetid: 982a767d-9174-408e-bdcf-ae0d96f88cef
-ms.openlocfilehash: 0845e2bc4e1afa5a8badfa3ceee16ae0bc2233cc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 660f7b915d252512a5da5c36bc6c85ced5d9cad8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625230"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390240"
 ---
 # <a name="constructors-cannot-implement-interface-methods"></a>I costruttori non possono implementare i metodi di interfaccia
 Si è provato a usare la parola chiave `New` per implementare un metodo di interfaccia. Questa operazione non è valida.  
@@ -25,4 +25,4 @@ Si è provato a usare la parola chiave `New` per implementare un metodo di inter
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
