--- a/docs/visual-basic/misc/bc30555.md
+++ b/docs/visual-basic/misc/bc30555.md
@@ -1,5 +1,5 @@
 ---
-title: Membro predefinito '<membername>' non è una proprietà
+title: Il membro predefinito '<membername>' non è una proprietà
 ms.date: 07/20/2015
 f1_keywords:
 - bc30555
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30555
 ms.assetid: 4ee6a63e-22ab-4a99-8c4c-db0d4933f026
-ms.openlocfilehash: 9403f3b9a03db3ab170d9f551720cfda6f9dd9ee
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 07f2145617201a1970acd47cd10d5925862fee9f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625183"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390149"
 ---
-# <a name="default-member-membername-is-not-a-property"></a>Membro predefinito '\<nomeMembro >' non è una proprietà
+# <a name="default-member-membername-is-not-a-property"></a>Il membro predefinito '\<membername>' non è una proprietà
 Si è provato a dichiarare un membro `Default`. Tuttavia, la parola chiave `Default` viene usata per identificare le proprietà predefinite.  
   
  **ID errore:** BC30555  
@@ -25,4 +25,4 @@ Si è provato a dichiarare un membro `Default`. Tuttavia, la parola chiave `Defa
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Default](../../visual-basic/language-reference/modifiers/default.md)
+- [Default](../language-reference/modifiers/default.md)
