--- a/docs/visual-basic/misc/bc30615.md
+++ b/docs/visual-basic/misc/bc30615.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30615
 ms.assetid: c8606b17-b50b-4014-b76e-b748d57e9389
-ms.openlocfilehash: de05cd88729ccfb2844fcfc983d6cd01cbc48ed2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 21746f2fe401e0f418292c3eaf56e0171ca27c1a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646800"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389720"
 ---
 # <a name="end-statement-cannot-be-used-in-class-library-projects"></a>L'istruzione 'End' non può essere usata nei progetti di tipo libreria di classi
 I progetti di tipo libreria di classi usati per creare DLL non consentono di usare la parola chiave `End` per arrestare l'esecuzione di codice in una routine.  
@@ -25,4 +25,4 @@ I progetti di tipo libreria di classi usati per creare DLL non consentono di usa
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Flusso di controllo](../../visual-basic/programming-guide/language-features/control-flow/index.md)
+- [Flusso di controllo](../programming-guide/language-features/control-flow/index.md)
