--- a/docs/visual-basic/misc/bc30784.md
+++ b/docs/visual-basic/misc/bc30784.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30784
 ms.assetid: b26c77b2-36ae-4dce-b048-f7c4b196faa4
-ms.openlocfilehash: 63580053a5c3a94e41677c0d851ddfb2438d35b9
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: c4ff3702ad7cf0ee349afb2d0be8fcf3955746ef
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61755740"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389527"
 ---
 # <a name="continue-while-can-only-appear-inside-a-while-statement"></a>'Continue While' può trovarsi solo all'interno di un'istruzione 'While'
 Un'istruzione `Continue While` può trovarsi solo all'interno di un ciclo `For...Next` .  
@@ -29,5 +29,5 @@ Un'istruzione `Continue While` può trovarsi solo all'interno di un ciclo `For..
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Continue](../../visual-basic/language-reference/statements/continue-statement.md)
-- [Istruzione While...End While](../../visual-basic/language-reference/statements/while-end-while-statement.md)
+- [Istruzione continue](../language-reference/statements/continue-statement.md)
+- [Istruzione While...End While](../language-reference/statements/while-end-while-statement.md)
