--- a/docs/visual-basic/misc/bc36002.md
+++ b/docs/visual-basic/misc/bc36002.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36002
 ms.assetid: 7b4602a9-84c9-4068-81bc-e8df03ffc130
-ms.openlocfilehash: 80f29610804c88d0878e6eaf739e911d7db60e5d
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 12636fc07984c0eedab53f756d5eed228a28a9d2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913431"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379393"
 ---
 # <a name="global-not-allowed-in-handles-local-name-expected"></a>'Global' non è consentito negli handle; è previsto il nome locale
 La clausola `Handles` deve fare riferimento a un evento locale. La parola chiave `Global` fornisce l'accesso agli elementi di programmazione globali.  
@@ -25,6 +25,6 @@ La clausola `Handles` deve fare riferimento a un evento locale. La parola chiave
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parola chiave Global](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names)
-- [Handles](../../visual-basic/language-reference/statements/handles-clause.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Global (parola chiave)](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names)
+- [Selettori](../language-reference/statements/handles-clause.md)
+- [Events](../programming-guide/language-features/events/index.md)
