--- a/docs/visual-basic/misc/bc30272.md
+++ b/docs/visual-basic/misc/bc30272.md
@@ -1,5 +1,5 @@
 ---
-title: «<argumentname>'non è un parametro di'<methoddeclaration>»
+title: "' <argumentname> ' non è un parametro di ' <methoddeclaration> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30272
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30272
 ms.assetid: cb9d00df-6e7c-4232-b5c3-5edddc53a65e
-ms.openlocfilehash: 2a852c53464dd886eaeb0a24fb22b53f4a1bc04a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ddad010f3d58981786cd5022eb2a564ea0d3af59
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664110"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390897"
 ---
-# <a name="argumentname-is-not-a-parameter-of-methoddeclaration"></a>«\<NomeArgomento >' non è un parametro di '\<methoddeclaration >»
+# <a name="argumentname-is-not-a-parameter-of-methoddeclaration"></a>' \<argumentname> ' non è un parametro di ' \<methoddeclaration> '
 Una chiamata di routine fornisce un argomento aggiuntivo non definito dalla routine.  
   
  **ID errore:** BC30272  
@@ -25,4 +25,4 @@ Una chiamata di routine fornisce un argomento aggiuntivo non definito dalla rout
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
