--- a/docs/visual-basic/misc/bc30273.md
+++ b/docs/visual-basic/misc/bc30273.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di proprietà di interfaccia"
+title: "' <specifier> ' non è valido in una dichiarazione di proprietà di interfaccia"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30273
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30273
 ms.assetid: f10c4f5f-6176-4dba-99a9-b58f3b390fba
-ms.openlocfilehash: 794d94734d283f9b1e450fbb3e57e6a7e3f5783b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: da293159d3edff95a3c12a90d7930a5e54f7fba5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664142"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390871"
 ---
-# <a name="specifier-is-not-valid-on-an-interface-property-declaration"></a>'\<identificatore >' non è valido in una dichiarazione di proprietà di interfaccia
+# <a name="specifier-is-not-valid-on-an-interface-property-declaration"></a>' \<specifier> ' non è valido in una dichiarazione di proprietà di interfaccia
 Un'istruzione `Property` all'interno di un'interfaccia contiene una parola chiave non valida, ad esempio `Implements`. Un'interfaccia può solo definire i membri, non implementarli.  
   
  **ID errore:** BC30273  
@@ -27,5 +27,5 @@ Un'istruzione `Property` all'interno di un'interfaccia contiene una parola chiav
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
