--- a/docs/visual-basic/misc/bc30572.md
+++ b/docs/visual-basic/misc/bc30572.md
@@ -1,5 +1,5 @@
 ---
-title: Alias'<namespacename>' è già dichiarato
+title: Alias '<namespacename>' è già dichiarato
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30572
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30572
 ms.assetid: 52393bee-33c5-4738-99c7-3a40340f5a98
-ms.openlocfilehash: d57cb50d17962a18b4d049f9a9107e008b7ed6bb
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a1894088f01537e000ec8d30f262d0d2c6bd589c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621058"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390071"
 ---
-# <a name="alias-namespacename-is-already-declared"></a>Alias'\<NomeSpazioDeiNomi >' è già dichiarato
+# <a name="alias-namespacename-is-already-declared"></a>Alias '\<namespacename>' è già dichiarato
 Si è provato a usare `Imports` per importare uno spazio dei nomi già dichiarato.  
   
  **ID errore:** BC30572  
@@ -25,5 +25,5 @@ Si è provato a usare `Imports` per importare uno spazio dei nomi già dichiarat
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Imports (tipo e spazio dei nomi .NET)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
-- [Alias](../../visual-basic/language-reference/statements/alias-clause.md)
+- [Istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [Alias](../language-reference/statements/alias-clause.md)
